--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "mongoose schema inheritance and discriminator key extension",
   "main": "index.js",
   "scripts": {
-    "test": "node --harmony_proxies ./node_modules/.bin/grunt test"
+    "test": "node ./node_modules/.bin/grunt test"
   },
   "homepage": "https://github.com/kennylmay/mongoose-schema-extend",
   "repository": {
@@ -43,16 +43,16 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "harmony-reflect": "^1.4.2",
-    "lodash": "^4.17.10"
+    "harmony-reflect": "^1.6.1",
+    "lodash": "^4.17.15"
   },
   "devDependencies": {
-    "glob": "^5.0.15",
-    "grunt": "^0.4.5",
-    "grunt-cli": "^0.1.13",
-    "grunt-mocha-test": "^0.12.7",
-    "mocha": "^2.3.3",
-    "mongoose": "^4.2.4",
-    "should": "~1.1.0"
+    "glob": "^7.1.6",
+    "grunt": "^1.0.4",
+    "grunt-cli": "^1.3.2",
+    "grunt-mocha-test": "^0.13.3",
+    "mocha": "^7.0.1",
+    "mongoose": "^5.8.11",
+    "should": "~13.2.3"
   }
 }
